<resources>
    //Título
    <string name="app_name">MercApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_maps">Map</string>

    // Menu drawer
    <string name="nav_drawer_perfil">Perfil</string>
    <string name="nav_drawer_historico">Histórico</string>
    <string name="nav_drawer_descontos">Descontos</string>
    <string name="nav_drawer_carrinho">Carrinho</string>
    <string name="nav_drawer_mapa">Mapa</string>
    <string name="nav_drawer_mais">Comunicação</string>
    <string name="nav_drawer_administrador">Administrador</string>
    <string name="nav_drawer_sobre">Sobre</string>
    <string name="nav_drawer_configuracao">Configuração</string>
    <string name="nav_drawer_configuracoes">Configurações</string>

    nav_drawer_configuracoes
    <string name="nav_drawer_sair">Sair</string>


    //Tela_Administrador
    <string name="titulo_tela_administrador">Administrador</string>
    <string name="botao_cadastro_supermercado">Cadastrar</string>
    <string name="botao_voltar_para_o_Mapa">Voltar</string>
    <string name="botao_tela_lista_supermercados">Supermercados</string>
    <string name="botao_tela_lista_produtos">Produtos</string>
    <string name="botao_cadastro_produtos">Cadastrar</string>
    <string name="titulo_supermercados">Supermercados</string>
    <string name="titulo_produtos">Produtos</string>

    //Tela_cadastro
    <string name="hint_email_tela_cadastro">Email</string>
    <string name="hint_confirmar_senha_tela_cadastro">Confirmar Senha</string>
    <string name="hint_senha_tela_cadastro">Senha</string>
    <string name="botao_Cadastrar_tela_cadastro">Cadastrar</string>
    <string name="botao_voltar_tela_cadastro">Voltar</string>

    //Tela_cadastro_pessoa
    <string name="titulo_Tela_cadastro_pessoa">Finalize seu cadastro para poder realizar compras.</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_número_cartao">Número Cartão</string>
    <string name="botao_salvar">Salvar</string>

    //Tela_cadastro_Produtos
    <string name="titulo_tela_cadastro_produtos">Cadastro de Produtos</string>
    <string name="botao_cadastrar_produtos_direto">Salvar</string>
    <string name="botao_voltar_tela_cadastro_produtos">Voltar</string>
    <string name="nome_vazio_tela_cadastro_produtos">Campo "Nome" não pode ser vazio!</string>
    <string name="descricao_vazio_tela_cadastro_produtos">Campo "Descrição" não pode ser vazio!</string>
    <string name="preco_vazio_tela_cadastro_produtos">Campo "preço" não pode ser vazio!</string>


    //Tela_cadastro_supermercado
    <string name="tela_cadastro_dos_Supermercados">Cadastrar de Supermercados</string>
    <string name="tela_busca_dos_Supermercados">Buscar</string>
    <string name="hint_nome_supermercado">Nome</string>
    <string name="hint_numero_telefone_supermercado">Telefone</string>
    <string name="botao_cadastrar_supermercados">Salvar</string>
    <string name="hint_busca_supermercado_pelo_nome">Buscar pelo Nome</string>
    <string name="botao_cadastrar_supermercado_direto">Cadastrar Direto</string>
    <string name="botao_voltar_tela_cadastro_e_busca_de_supermercado">Voltar</string>
    <string name="hint_latitude_supermercado">Latitude</string>
    <string name="hint_longitude_supermercado">Longitude</string>
    <string name="selecionar_coordenadas">Usar o Mapa</string>
    <string name="ajuda_mapa">Pressionar o local desejado no mapa por mais de 1 segundo.</string>
    <string name="nome_vazio_tela_cadastro_supermrecados">Campo "Nome" não pode ser vazio!</string>
    <string name="telefone_vazio_tela_cadastro_supermrecados">Campo "Telefone" não pode ser vazio!</string>
    <string name="latitude_vazio_tela_cadastro_produtos">Campo "Latitude" não pode ser vazio!</string>
    <string name="longitude_vazio_tela_cadastro_produtos">Campo "Longitude" não pode ser vazio!</string>


    //Tela_lista_produtos
    <string name="titulo_lista_produtos">Lista Geral de Produtos</string>
    <string name="botao_voltar_tela_lista_produtos">Voltar</string>
    <string name="textview_descricao_produto">Descrição</string>
    <string name="textview_id_produto">id</string>
    <string name="textview_preco_produto">Preço</string>
    <string name="textview_por_produto">Por</string>
    <string name="textview_idsuper_produto">IdSuper</string>

    //Tela_lista_produtos_do_supermercado
    <string name="textview_descricao_produto_do_supermercado">Descrição</string>
    <string name="textview_id_produto_do_supermercado">id</string>
    <string name="textview_preco_produto_do_supermercado">Preço</string>
    <string name="textview_idsuper_produto_do_supermercado">Id</string>
    <string name="botao_voltar_tela_lista_produtos_do_supermercado">Voltar</string>

    //Tela_lista_produtos_do_supermercado
    <string name="titulo_lista_supermercados">Lista de Supermercados</string>
    <string name="botao_voltar_tela_lista_supermercado">Voltar</string>
    <string name="textview_id_supermercado">Id</string>
    <string name="textview_nome_supermercado">Nome</string>
    <string name="textview_telefone_supermercado">Telefone</string>

    //Tela_login
    <string name="hint_email_tela_login">Email</string>
    <string name="hint_senha_tela_login">Senha</string>
    <string name="botao_login_tela_login">Login</string>
    <string name="botao_cadastrar_tela_login">Cadastrar</string>
    <string name="label_Tela_login">Esqueci minha senha.</string>

    //Tela_supermercado
    <string name="textview_fone_supermercado">Fone: </string>
    <string name="botao_voltar_tela_supermercado">Voltar</string>
    <string name="textViewDepartamentos">Departamentos</string>
    <string name="botao_produtos_tela_supermercado">Todos os Produtos do Supermercado</string>

    //Departamentos
    <string name="dp_padaria">Padaria</string>
    <string name="dp_frios">Frios</string>
    <string name="dp_acougue">Açougue</string>
    <string name="dp_frutas">Frutas</string>
    <string name="dp_bebidas">Bebidas</string>
    <string name="dp_mercearia">Mercearia</string>
    <string name="dp_higiene">Higiene</string>
    <string name="dp_limpeza">Limpeza</string>
    <string name="dp_bazar">Bazar</string>


    //fragment_cabecalho
    <string name="textview_supermercado_1_fragment_cabecalho">Supermercado 1</string>

    //fragment_rodape
    <string name="botao_ver_fragment_rodape">Ver</string>
    <string name="textview_supermercado_1_fragment_rodape">Supermercado 1</string>

    //tabela produtos ListView
    <string name="textview_coluna1_produtos">  Coluna 1 </string>
    <string name="textview_coluna2_produtos">  Coluna 2 </string>
    <string name="textview_coluna3_produtos">  Coluna 3 </string>
    <string name="textview_coluna4_produtos">  Coluna 4 </string>

    //supermercados
    <string name="textview_coluna1_supermercados">Coluna 1 </string>
    <string name="textview_coluna2_supermercados">Coluna 2 </string>
    <string name="textview_coluna3_supermercados">Coluna 3 </string>


    //tela_sobre
    <string name="nome_tela_sobre">MercApp</string>
    <string name="descricao_tela_sobre">O projeto MercApp  tem como objetivo permitir que
        o cliente realize suas compras em poucos minutos pelo seu Smartphone.
        O cliente irá buscar um supermercado de sua preferência que esteja cadastrado no
        aplicativo, selecionar os produtos, a forma de pagamento e receber tudo no conforto de sua casa.
        Neste contexto os clientes terão mais tempo para fazer outras coisas no dia-a-dia ao
        invés de perder tempo no supermercado e supermercado terá. </string>
    <string name="desenvolvedores_tela_sobre">Desenvolvedores:</string>
    <string name="tela_sobre_wellington">Wellington Luiz</string>
    <string name="tela_sobre_jobson">Jobson Pereira</string>
    <string name="tela_sobre_lucas">Lucas Filipe </string>
    <string name="tela_sobre_filipe">Filipe Peticormei</string>
    <string name="img_descricao_tela_sobre">icone do app</string>
    <string name="site_tela_sobre">https://sites.google.com/site/marksysufrpe</string>

    <!-- TODO: Remove or change this placeholder text
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">prompt_email</string>
    <string name="prompt_password">prompt_password</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="action_sign_in">action_sign_in</string>  -->

    <string name="title_activity_tela_principal">Map</string>
    <string name="title_activity_configuracoes">configuracoes</string>


    // Avisos
    <string name="email_vazio">Campo email não pode ser vazio!</string>
    <string name="senha_vazio">Campo senha não pode ser vazio!</string>
    <string name="email_senha_invalido">Email ou Senha inválidos!</string>
    <string name="email_invalido">Email inválidos!</string>
    <string name="senha_diferentes">Senhas diferentes!</string>
    <string name="login_tamanho_invalido">Seu login deve ter entre 4 e 15 caracteres!</string>
    <string name="login_senha_tamanho_invalido">Sua senha deve ter entre 3 e 15 caracteres!</string>
    <string name="title_activity_cadastro_pessoa">CadastroPessoaActivity</string>
    <string name="campo_vazio">Este campo não pode ser vazio!</string>

    //tela_recuperar_senha
    <string name="titulo_tela_recuperar_senha">Digite o email cadastrado no sistema para recuperar a senha.</string>


</resources>
