<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_administrador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mercapp.infra.Administrador">

    <TextView
        android:text="@string/titulo_tela_administrador"
        android:textStyle="normal|bold"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:textSize="26sp" />

    <Button
        android:text="@string/botao_tela_lista_produtos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeTelaAdministradorToListaProdutos"
        android:id="@+id/btnLsitarProdutos"
        android:layout_marginBottom="80dp"
        android:layout_above="@+id/button8"
        android:layout_alignStart="@+id/btnCadastroProdutos" />

    <Button
        android:text="@string/botao_cadastro_produtos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeTelaAdministradorToCadastroProdutos"
        android:id="@+id/btnCadastroProdutos"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/btnLsitarProdutos"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/titulo_produtos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCadastroProdutos"
        android:layout_alignParentStart="true"
        android:id="@+id/tvProdutos"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="@string/titulo_supermercados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/tvSupermercados"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/botao_cadastro_supermercado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeTelaAdministradorToCadastroSupermercado"
        android:id="@+id/btnCadastroSupermercado"
        android:layout_below="@+id/tvSupermercados"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/botao_tela_lista_supermercados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeTelaAdministradorToListaSupermercado"
        android:id="@+id/btnListarSupermercado"
        android:layout_below="@+id/btnCadastroSupermercado"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/botao_voltar_para_o_Mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="voltarToMenuMapa"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
