<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/colunaProduto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_coluna1_supermercados"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/colunaProduto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_coluna3_supermercados"
        android:textSize="18sp"
        android:layout_marginEnd="21dp"
        android:layout_alignBaseline="@+id/colunaProduto2"
        android:layout_alignBottom="@+id/colunaProduto2"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/colunaProduto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_coluna2_supermercados"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
