<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/colunaProduto1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/textview_coluna1_produtos"
            android:layout_marginStart="@dimen/marginTabelaColunasProdutos"
            android:layout_marginEnd="@dimen/marginTabelaColunasProdutos"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/colunaProduto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_coluna2_produtos"
            android:textSize="18sp"
            android:layout_marginEnd="@dimen/marginTabelaColunasProdutos"
            android:layout_marginStart="@dimen/marginTabelaColunasProdutos"/>

        <TextView
            android:id="@+id/colunaProduto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_coluna3_produtos"
            android:textSize="18sp"
            android:layout_marginEnd="@dimen/marginTabelaColunasProdutos"
            android:layout_marginStart="@dimen/marginTabelaColunasProdutos" />

        <TextView
            android:id="@+id/colunaProduto4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_coluna4_produtos"
            android:textSize="18sp"
            android:layout_marginStart="@dimen/marginTabelaColunasProdutos"
            android:layout_marginEnd="@dimen/marginTabelaColunasProdutos" />


        </TableRow>


    </TableLayout>

</RelativeLayout>
