<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro_produtos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mercapp.supermercado.gui.CadastroProdutos">

    <TextView
        android:text="@string/titulo_tela_cadastro_produtos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/botao_voltar_tela_cadastro_produtos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVoltar"
        android:onClick="changeTelaCadatroProdutosToTelaAdministrador"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/botao_cadastrar_produtos_direto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCadastrarDireto"
        android:onClick="cadastroProdutosDireto"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

</RelativeLayout>
