<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mercapp.usuario.gui.LoginActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="191dp"
            android:layout_height="195dp"
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:maxHeight="75dp"
            android:maxWidth="75dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="230dp"
        android:id="@+id/relativeLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etEmail"
            android:hint="@string/hint_email_tela_login" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etSenha"
            android:hint="@string/hint_senha_tela_login"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />

        <Button
            android:text="@string/botao_cadastrar_tela_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCadastrar"
            android:onClick="cadastrarUsuario"
            android:layout_below="@+id/btnEntrar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Button
            android:text="@string/botao_login_tela_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEntrar"
            android:onClick="loginUsuario"
            android:layout_below="@+id/etSenha"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</RelativeLayout>
